# AlgorithmTasks

./: CMakeLists.txt
constest1/: CMakeLists.txt
constest1/easyswaps/: checker.cpp  generator.cpp  solution.cpp  validator.cpp
testlib/: testlib.h
